[DB-6811] fix css on mobile for query page

--- a/frontend/src/styles/scss/_query.scss
+++ b/frontend/src/styles/scss/_query.scss
@@ -33,6 +33,11 @@ $padding: 24px;
             margin-left: auto;
             font-size: 20px;
         }
+
+        @media (max-width: 768px) {
+            margin-bottom: 8px;
+            width: 100%;
+        }
     }
 }
 @media (max-width: 768px) {
@@ -115,6 +120,10 @@ $padding: 24px;
             color: #080037;
             font-size: 16px;
             font-weight: 600;
+        }
+
+        @media (max-width: 768px) {
+            width: auto;
         }
     }
 }
